[project]
name = "redge"
version = "0.1.0"
description = "Code for Categorical Reparameterization using Denoising Diffusion models at https://arxiv.org/abs/2601.00781"
readme = "README.md"
authors = [
{ name = "Samson Gourevitch", email = "samson.gourevitch@gmail.com" }, 
{ name = "Yazid Janati", email = "yazid.janati@gmail.com"}
]
license = { text = "MIT" }
urls = { Repository = "https://github.com/samsongourevitch/redge" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "reinmax>=0.1.0",
    "torch>=2.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["redge*"]
